# rain.erc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  flake.nix  foundry.toml
.github/workflows/: manual-rs-release.yml  package-release.yaml  rainix.yml
src/: lib.rs
src/erc165/: mod.rs
src/erc4626/: mod.rs
test-contracts/erc165/: BadERC165.sol  ERC165Supported.sol  InvalidERC165.sol  NonERC165.sol
