[package]
name = "rain-erc"
version = "0.0.0"
edition = "2021"
description = "Provides ERC related utitlies in rust"
license = "CAL-1.0"
repository = "https://github.com/rainlanguage/rain.erc"

[dependencies]
thiserror = "1.0.56"
alloy = { version = "1.0.9", features = [
  "rand",
  "sol-types",
  "providers",
  "contract",
  "network",
  "transport-http",
  "json-rpc",
] }

[dev-dependencies]
serde = "1.0.203"
tokio = { version = "1.28.0", features = ["full"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }

[lib]
path = "src/lib.rs"

[lints.clippy]
all = "warn"

[package.metadata.docs.rs]
all-features = true
