[package]
name = "rain-erc"
version = "0.1.2"
edition = "2021"
description = "Provides ERC related utitlies in rust"
license = "CAL-1.0"
repository = "https://github.com/rainlanguage/rain.erc"

[dependencies]
thiserror = "1.0.56"
serde = { version = "1.0.203", features = ["derive"] }
alloy = { version = "1.0.9", features = [
  "rand",
  "serde",
  "sol-types",
  "providers",
  "contract",
  "json-rpc",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
# alloy's `providers` feature pulls in `getrandom` transitively. Both
# major versions are reachable in the dep graph and each has its own
# wasm-routing feature: 0.2 calls it `js`, 0.3 calls it `wasm_js`.
# Without these, wasm32-unknown-unknown builds fail with
# "the wasm*-unknown-unknown targets are not supported by default".
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = [
  "wasm_js",
] }

[dev-dependencies]
serde_json = { version = "1.0.117", features = ["raw_value"] }
tokio = { version = "1.28.0", features = ["macros", "rt"] }

[lib]
path = "src/lib.rs"

[lints.clippy]
all = "warn"

[package.metadata.docs.rs]
all-features = true
